<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">便捷电话</string>
    <string name="app_author">作者：蔡博文</string>
    <string name="txt_app_version">软件版本：</string>
    <integer name="app_version">20130913</integer>
    <integer name="wallpaper_num">78</integer>
    <string name="phone_num_son">18392387786</string>
    <string name="phone_num_mo">13657192845</string>
    <string name="phone_num_fa">13636234716</string>
    					  <!-- 355584059801153 -->
    <string name="phone_imei1">000000000000000</string>
    <string name="name_wallpaper_perfix">wallpaper_</string>
    <string name="title_activity_act_check">手机及SIM卡异常</string>
    <string name="title_activity_act_config">设置</string>
    <string name="action_settings">Settings</string>
    <string name="txt_sms_hint">在此输入短信</string>
    <string name="txt_phone_hint">在此输入号码</string>
    <string name="txt_sendSms">发送短信</string>
    <string name="txt_btn_phone">拨打电话</string>
    <string name="txt_sms_sent">发送成功</string>
    <string name="txt_sms_delivered">短信已送达</string>
    <string name="txt_general_failure">未知错误</string>
    <string name="txt_no_service">现在没有服务</string>
    <string name="txt_null_pdu">网络故障</string>
    <string name="txt_radio_off">无信号</string>
    <string name="txt_btn_cfg">编辑号码及短信模版</string>
    <string name="txt_select_sms">选择短信</string>
    <string name="txt_sm_temp_null">没有短信模版</string>
    <string name="txt_set_phone_num">设置为默认号码</string>
    <string name="txt_sm_add">添加为短信模版</string>
    <string name="txt_sm_del">删除此短信模版</string>
    <string name="txt_wrong_phone">只有作者的父母才能够使用此软件！</string>
    <string name="txt_exit">退出</string>
    <string name="txt_confirm">明白</string>
    <string name="txt_finished">完成</string>
    <string name="txt_phone_num_changed">检测到手机号码变更，请联系作者获取激活码</string>
    <string name="txt_enter_product_key">输入激活码</string>
    <string name="txt_enter_reactivate">重新激活</string>
    <string name="txt_activated">软件已激活！</string>
    <string name="txt_activate_fail">软件激活失败！</string>
    <string name="txt_sm_template1">见信回电话。</string>
    <string name="txt_sm_template2">现在较忙，一会儿再说。</string>
    <string name="txt_sm_template3">来信已收到。</string>
    <string name="txt_sm_template4">来信未收到。</string>
    <string name="txt_illegal_phone">请输入正确的手机号码</string>
    <string name="txt_start_count">累计启动：</string>
	<string name="txt_set_wallpaper">将此背景图片设为手机壁纸吗？</string>
    <string name="txt_ok">设置</string>
    <string name="txt_cancel">取消</string>
    <string-array name="txt_sm_templates">
        <item >见信回电话。</item>
        <item >现在较忙，一会儿再说。</item>
        <item >来信已收到。</item>
        <item >来信未收到。</item>
    </string-array>
</resources>
