<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Act_Main" >

    	<TextView
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_centerHorizontal="true"
    	    android:layout_marginTop="10dp"
    	    android:textSize="20sp"
    	    android:textStyle="bold"
    	    android:text="@string/app_name"/>

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:layout_marginTop="40dp"
		    android:text="@string/app_author"
		    android:textStyle="bold" />
		
		<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="60dp"
        	android:layout_marginLeft="70dp"
        	android:textSize="12sp"
        	android:text="@string/txt_app_version" />
		<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="60dp"
        	android:layout_marginLeft="130dp"
        	android:textSize="12sp"
        	android:text="@integer/app_version" />
		
		<TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="60dp"
        	android:layout_marginLeft="190dp"
        	android:textSize="12sp"
        	android:text="@string/txt_start_count" />
		
		<TextView
	    	android:id="@+id/txt_start_count"
        	android:layout_width="50dp"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="60dp"
        	android:layout_marginLeft="250dp"
        	android:textSize="12sp"/>
		
    <AutoCompleteTextView
        android:id="@+id/txt_sms"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="85dp"
        android:hint="@string/txt_sms_hint" >

        <requestFocus />
    </AutoCompleteTextView>

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_sms"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="40dp"
        android:layout_centerVertical="true"
        android:useDefaultMargins="true"
        android:columnCount="2">

		<Spinner
        	android:id="@+id/spn_select_sms"
        	android:layout_width="120dp"
        	android:layout_height="55dp"
        	android:layout_column="0"
        	android:layout_row="0" />
    
		<Button
        	android:id="@+id/btn_send_sms"
        	android:layout_width="120dp"
        	android:layout_height="55dp"
        	android:layout_column="1"
        	android:layout_row="0"
        	android:textStyle="bold"
        	android:text="@string/txt_sendSms" />
            
		<Button
        	android:id="@+id/btn_call"
        	android:layout_width="120dp"
        	android:layout_height="55dp"
        	android:layout_column="0"
        	android:layout_row="1"
        	android:textStyle="bold"
        	android:text="@string/txt_btn_phone" />
               
	    <Button
    	    android:id="@+id/btn_config"
        	android:layout_width="120dp"
        	android:layout_height="55dp"
        	android:layout_column="1"
        	android:layout_row="1"
        	android:textStyle="bold"
        	android:text="@string/title_activity_act_config" />
    
    </GridLayout>

</RelativeLayout>



